# react-native-security-checks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RNSecurityChecks.podspec  package.json  react-native-security-checks.podspec  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/c/: checker_modules.c  checker_modules.h
android/src/main/java/com/securitychecks/: FridaSecurityChecker.kt  SecurityChecksModule.kt  SecurityChecksPackage.kt  SignatureSecurityChecker.kt
android/src/main/jni/: CMakeLists.txt  native-checker.c
example/: app.json  package.json
example/android/: gradlew.bat  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/securitychecks/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/SecurityChecksExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/SecurityChecksExample.xcodeproj/: project.pbxproj
example/ios/SecurityChecksExample.xcodeproj/xcshareddata/xcschemes/: SecurityChecksExample.xcscheme
example/ios/SecurityChecksExample.xcworkspace/: contents.xcworkspacedata
example/ios/SecurityChecksExampleTests/: SecurityChecksExampleTests.m
example/src/: App.tsx
ios/: RNSecurityChecks.h  RNSecurityChecks.mm  SecurityChecks+Frida.h  SecurityChecks+Frida.mm  SecurityChecks+SimulatorChecker.h  SecurityChecks+SimulatorChecker.mm  SecurityChecks.h  SecurityChecks.mm
src/: NativeSecurityChecks.ts  index.tsx
